@@ -26,7 +26,7 @@ my %mcache = (); #MODULE_MAGIC_NUMBER
     for (@_) { -e $_ or die $! }
 } if $File::Copy::VERSION < 2.0;
 
-$VERSION = "1.09_01-dev";
+$VERSION = "1.10";
 
 use subs qw(_prompt iedit asrc);
 
